<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_pass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ecoronado.firebaseauthentication.ForgotPass">

    <ImageView
        android:id="@id/icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/recover"
        android:layout_width="100dp"
        android:layout_height="100dp"
        />

    <TextView
        android:layout_below="@id/icon"
        android:id="@id/forgot_pass"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/forgot_message"
        android:textColor="@color/colorPrimary"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/forgot_pass"
        android:id="@id/forgot_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@id/forgot_email"
            android:hint="@string/forgot_input"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_below="@id/forgot_input_email"
        android:id="@id/forgot_btn_email"
        android:text="@string/send_email"
        android:background="@color/loginBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@id/forgot_btn_email"
        android:id="@id/btnBack"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/back"
        android:textColor="@color/colorPrimary"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
