<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ecoronado.firebaseauthentication.SignUp">

    <ImageView
        android:id="@id/icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/add_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/icon"
        android:id="@id/signup_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@id/signup_email"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/signup_input_email"
        android:id="@+id/signup_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@id/login_pass"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/signup_input_password"
        android:id="@+id/signup_input_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@id/confirm_pass"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/signup_input_confirm_password"
        android:id="@+id/signup_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@id/login_name"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_below="@id/signup_input_name"
        android:id="@id/signup_btn_register"
        android:text="@string/register"
        android:background="@color/loginBtn"
        android:layout_marginTop="40dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</RelativeLayout>
